--- a/app.properties
+++ b/app.properties
@@ -1,1 +1,4 @@
-connection.url = jdbc:postgresql://localhost:5432/restaurant?user=root&password=qwerty
+connection.url.full = jdbc:postgresql://localhost:5432/restaurant?user=root&password=qwerty
+connection.url = jdbc:postgresql://localhost:5432/restaurant
+connection.user = root
+connection.pass = qwerty
