--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,13 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.12.1</version>
+      <version>2.11.2</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/de.svenkubiak/jBCrypt -->
+    <dependency>
+      <groupId>de.svenkubiak</groupId>
+      <artifactId>jBCrypt</artifactId>
+      <version>0.4.3</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/taglibs/standard -->
@@ -96,7 +102,7 @@
           <version>2.2</version>
           <configuration>
             <port>8088</port>
-            <path>/api</path>
+            <path>/restaurant</path>
           </configuration>
         </plugin>
         <plugin>
