--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,3 +1,5 @@
+# ---------- LOGINS
+
 #select.all.logins.log =
 select.all.logins = SELECT * FROM login
 select.all.logins.dbe = Cannot find all users
@@ -9,3 +11,8 @@ create.user.dbe = Cannot insert user:
 select.login.byLogin = SELECT * FROM login WHERE login=?
 select.login.byLogin.dbe = Cannot get user:
 select.login.byLogin.log.err = Invalid attempt of login user:
+
+# ---------- DISHES
+
+select.all.dishes = SELECT * FROM dishes LEFT JOIN categories ON dishes.category_id = categories.id
+select.all.dishes.dbe = Cannot find all dishes
