--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,14 +27,14 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-  <filter>
-    <filter-name>SessionLocaleFilter</filter-name>
-    <filter-class>ua.servlet.restaurant.filters.SessionLocaleFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>SessionLocaleFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+<!--  <filter>-->
+<!--    <filter-name>SessionLocaleFilter</filter-name>-->
+<!--    <filter-class>ua.servlet.restaurant.filters.SessionLocaleFilter</filter-class>-->
+<!--  </filter>-->
+<!--  <filter-mapping>-->
+<!--    <filter-name>SessionLocaleFilter</filter-name>-->
+<!--    <url-pattern>/*</url-pattern>-->
+<!--  </filter-mapping>-->
 
   <filter>
     <filter-name>AuthFilter</filter-name>
