error management in process, DBExceptions

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -9,10 +9,17 @@ create.user = INSERT INTO login (login, email, password, role, time) VALUES (?,?
 create.user.dbe = Cannot insert user:
 
 select.login.byLogin = SELECT * FROM login WHERE login=?
-select.login.byLogin.dbe = Cannot get user:
-select.login.byLogin.log.err = Invalid attempt of login user:
+select.login.byLogin.success = User logged successfully, user:
+select.login.byLogin.dbe = Wrong login for user:
+select.login.byLogin.dbe.pass = Wrong password for user:
+select.login.byLogin.dbe.exist = User with same login exists!
 
 # ---------- DISHES
 
 select.all.dishes = SELECT * FROM dishes LEFT JOIN categories ON dishes.category_id = categories.id
 select.all.dishes.dbe = Cannot find all dishes
+
+
+# ---------- Non standard errors
+
+error.unknown.role = Unknown role
