--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -20,6 +20,11 @@ select.all.dishes = SELECT * FROM dishes LEFT JOIN categories ON dishes.category
 select.all.dishes.dbe = Cannot find all dishes
 
 
+# ----------Validation errors
+invalid.fields = Invalid form, empty fields
+invalid.email = Invalid email
+invalid.password = Invalid password, must have 2-6 symbols
+
 # ---------- Non standard errors
 
 error.unknown.role = Unknown role
