basket done, dish update/delete in progress

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -16,15 +16,47 @@ select.login.byLogin.dbe.exist = User with same login exists!
 
 # ---------- DISHES
 
-select.all.dishes = SELECT * FROM dishes LEFT JOIN categories ON dishes.category_id = categories.id
+select.all.dishes = SELECT * FROM dishes d LEFT JOIN categories c ON d.category_id = c.id
 select.all.dishes.dbe = Cannot find all dishes
 
+select.dishes.log = Select dish, id:
+select.dishes = SELECT * FROM dishes d LEFT JOIN categories c ON d.category_id=c.id WHERE d.id=?
+select.dishes.dbe = Cannot find dish, wrong id:
+
+update.dishes.log = Update dish:
+update.dishes = UPDATE dishes SET name_en=?, name_ua=?, price=? WHERE name_en=?
+update.dishes.dbe = Cannot update dish, id:
+
+delete.dishes.log = Delete dish, id:
+delete.dishes = DELETE FROM dishes WHERE id=?
+delete.dishes.dbe = Cannot delete dish, id:
+
+# ---------- BASKETS
+
+select.all.baskets = SELECT * FROM baskets b LEFT JOIN dishes d on b.dish_id = d.id LEFT JOIN categories c on c.id = d.category_id
+select.all.baskets.dbe = Cannot find all dishes
+select.all.baskets.empty = Basket is empty
+
+create.basket.log = Add new dish to the basket, dish id:
+create.basket = INSERT INTO baskets (dish_id, login_id) VALUES (?,?)
+create.basket.dbe = Cannot insert basket
+
+delete.basket.log = Delete dish from the basket, dish id:
+delete.basket = DELETE FROM baskets WHERE id IN (SELECT id FROM baskets WHERE dish_id=? LIMIT 1)
+delete.basket.dbe = Cannot delete basket, id:
+
+delete.all.basket.log = Delete dish from the basket, dish id:
+delete.all.basket = DELETE FROM baskets WHERE login_id=?
+delete.all.basket.dbe = Cannot delete basket, user id:
 
 # ----------Validation errors
 invalid.fields = Invalid form, empty fields
 invalid.email = Invalid email
 invalid.password = Invalid password, must have 2-6 symbols
+invalid.price = Price must be grater than 0
 
 # ---------- Non standard errors
 
 error.unknown.role = Unknown role
+transaction.rollback = Transaction is being rolled back
+transaction.rollback.fail = Error in transaction rollback
