order user page done

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,9 +1,5 @@
 # ---------- LOGINS
 
-#select.all.logins.log =
-select.all.logins = SELECT * FROM login
-select.all.logins.dbe = Cannot find all users
-
 create.user.log = Create new user:
 create.user = INSERT INTO login (login, email, password, role, time) VALUES (?,?,?,?,?)
 create.user.dbe = Cannot insert user:
@@ -33,7 +29,8 @@ delete.dishes.dbe = Cannot delete dish, id:
 
 # ---------- BASKETS
 
-select.all.baskets = SELECT * FROM baskets b LEFT JOIN dishes d on b.dish_id = d.id LEFT JOIN categories c on c.id = d.category_id
+select.all.baskets.log = Getting basket list for user
+select.all.baskets = SELECT * FROM baskets b LEFT JOIN dishes d on b.dish_id = d.id LEFT JOIN categories c on c.id = d.category_id WHERE login_id=?
 select.all.baskets.dbe = Cannot find all dishes
 select.all.baskets.empty = Basket is empty
 
@@ -48,6 +45,25 @@ delete.basket.dbe = Cannot delete basket, id:
 delete.all.basket.log = Delete dish from the basket, dish id:
 delete.all.basket = DELETE FROM baskets WHERE login_id=?
 delete.all.basket.dbe = Cannot delete basket, user id:
+
+# ---------- ORDERS
+
+select.all.orders.log = Getting all orders for user
+select.all.orders = SELECT * FROM orders o WHERE login_id=?
+select.all.orders.dbe = Cannot find all orders
+select.all.orders.empty = Orders list is empty
+
+select.orders.log = Select order for payment, user:
+select.orders = SELECT * FROM orders WHERE id=?
+select.orders.dbe = Cannot find order for payment, id:
+
+create.order.log = Creating new order got user:
+#create.order = INSERT INTO baskets (dish_id, login_id) VALUES (?,?)
+create.order.dbe = Cannot create order
+
+update.orders.log = Update status for order:
+update.orders = UPDATE orders SET status=? WHERE id=? AND status=?
+update.orders.dbe = Cannot update orders status, id:
 
 # ----------Validation errors
 invalid.fields = Invalid form, empty fields
