fix small bugs, custom tag, pagination

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ connection.url.full = jdbc:postgresql://localhost:5432/restaurant?user=root&pass
 connection.url = jdbc:postgresql://localhost:5432/restaurant
 connection.user = root
 connection.pass = qwerty
+
+pageable.page=5
