--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -4,6 +4,7 @@ create.user.log = Create new user:
 create.user = INSERT INTO login (login, email, password, role, time) VALUES (?,?,?,?,?)
 create.user.dbe = Cannot insert user:
 
+select.login = Login user: 
 select.login.byLogin = SELECT * FROM login WHERE login=?
 select.login.byLogin.success = User logged successfully, user:
 select.login.byLogin.dbe = Wrong login for user:
@@ -30,7 +31,7 @@ delete.dishes.dbe = Cannot delete dish, id:
 # ---------- BASKETS
 
 select.all.baskets.log = Getting basket list for user
-select.all.baskets = SELECT * FROM baskets b LEFT JOIN dishes d on b.dish_id = d.id LEFT JOIN categories c on c.id = d.category_id WHERE login_id=?
+select.all.baskets = SELECT * FROM baskets b LEFT JOIN dishes d on b.dish_id = d.id LEFT JOIN categories c on c.id = d.category_id WHERE login_id=? ORDER BY b.id
 select.all.baskets.dbe = Cannot find all dishes
 select.all.baskets.empty = Basket is empty
 
@@ -48,8 +49,11 @@ delete.all.basket.dbe = Cannot delete basket, user id:
 
 # ---------- ORDERS
 
+select.all.orders.manager.log = Getting all orders for manager
+select.all.orders.manager = SELECT * FROM orders o LEFT JOIN login l ON o.login_id = l.id ORDER BY o.id
+
 select.all.orders.log = Getting all orders for user
-select.all.orders = SELECT * FROM orders o WHERE login_id=?
+select.all.orders = SELECT * FROM orders o LEFT JOIN login l ON o.login_id = l.id WHERE o.login_id=? ORDER BY o.id
 select.all.orders.dbe = Cannot find all orders
 select.all.orders.empty = Orders list is empty
 
@@ -58,7 +62,7 @@ select.orders = SELECT * FROM orders WHERE id=?
 select.orders.dbe = Cannot find order for payment, id:
 
 create.order.log = Creating new order got user:
-#create.order = INSERT INTO baskets (dish_id, login_id) VALUES (?,?)
+create.order = INSERT INTO orders (status, time, total_price, login_id) VALUES (?, current_timestamp, (SELECT SUM(d.price) FROM baskets b JOIN dishes d on b.dish_id = d.id WHERE b.login_id=?), ?)
 create.order.dbe = Cannot create order
 
 update.orders.log = Update status for order:
@@ -67,9 +71,15 @@ update.orders.dbe = Cannot update orders status, id:
 
 # ----------Validation errors
 invalid.fields = Invalid form, empty fields
+invalid.field = Invalid fields
+invalid.id = Invalid id
+invalid.positive.id = Invalid id, should be positive number
 invalid.email = Invalid email
 invalid.password = Invalid password, must have 2-6 symbols
-invalid.price = Price must be grater than 0
+invalid.username = Invalid username, login exists
+invalid.user = You cannot login, this uses already logged in
+invalid.price = Price cannot be 0 and has no more than 2 digits after comma
+invalid.update.status = You cannot update new and done order
 
 # ---------- Non standard errors
 
