principal to session + apply and check sessionListener

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -58,7 +58,7 @@ select.all.orders.dbe = Cannot find all orders
 select.all.orders.empty = Orders list is empty
 
 select.orders.log = Select order for payment, user:
-select.orders = SELECT * FROM orders WHERE id=?
+select.orders = SELECT * FROM orders o LEFT JOIN login l ON o.login_id = l.id WHERE o.id=?
 select.orders.dbe = Cannot find order for payment, id:
 
 create.order.log = Creating new order got user:
