--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,6 @@
   </properties>
 
   <dependencies>
-    <!-- Tests -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
     <!-- Servlet -->
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -46,6 +39,18 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+<!--    <dependency>-->
+<!--      <groupId>jstl</groupId>-->
+<!--      <artifactId>jstl</artifactId>-->
+<!--      <version>1.2</version>-->
+<!--    </dependency>-->
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/taglibs/standard &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>taglibs</groupId>-->
+<!--      <artifactId>standard</artifactId>-->
+<!--      <version>1.1.2</version>-->
+<!--    </dependency>-->
     <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -58,13 +63,6 @@
       <artifactId>jBCrypt</artifactId>
       <version>0.4.3</version>
     </dependency>
-
-    <!-- https://mvnrepository.com/artifact/taglibs/standard -->
-<!--    <dependency>-->
-<!--      <groupId>taglibs</groupId>-->
-<!--      <artifactId>standard</artifactId>-->
-<!--      <version>1.1.2</version>-->
-<!--    </dependency>-->
 
     <!-- Database -->
     <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
@@ -86,6 +84,22 @@
       <artifactId>log4j-core</artifactId>
       <version>2.12.1</version>
     </dependency>
+
+    <!-- Tests -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.10.19</version>
+      <scope>test</scope>
+    </dependency>
+
 
 
   </dependencies>
