--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,15 +27,6 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-<!--  <filter>-->
-<!--    <filter-name>SessionLocaleFilter</filter-name>-->
-<!--    <filter-class>ua.servlet.restaurant.filters.SessionLocaleFilter</filter-class>-->
-<!--  </filter>-->
-<!--  <filter-mapping>-->
-<!--    <filter-name>SessionLocaleFilter</filter-name>-->
-<!--    <url-pattern>/*</url-pattern>-->
-<!--  </filter-mapping>-->
-
   <filter>
     <filter-name>AuthFilter</filter-name>
     <filter-class>ua.servlet.restaurant.filters.AuthFilter</filter-class>
@@ -44,6 +35,21 @@
     <filter-name>AuthFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <!--  <filter>-->
+  <!--    <filter-name>SessionLocaleFilter</filter-name>-->
+  <!--    <filter-class>ua.servlet.restaurant.filters.SessionLocaleFilter</filter-class>-->
+  <!--  </filter>-->
+  <!--  <filter-mapping>-->
+  <!--    <filter-name>SessionLocaleFilter</filter-name>-->
+  <!--    <url-pattern>/*</url-pattern>-->
+  <!--  </filter-mapping>-->
+
+  <listener>
+    <listener-class>
+      ua.servlet.restaurant.listener.SessionListener
+    </listener-class>
+  </listener>
 
   <error-page>
     <exception-type>java.lang.Exception</exception-type>
