--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -30,14 +30,14 @@ delete.dishes.dbe = Cannot delete dish, id:
 
 # ---------- BASKETS
 
-select.all.baskets.log = Getting basket list for user
+select.all.baskets.log = Getting basket list for user:
 select.all.baskets = SELECT * FROM baskets b LEFT JOIN dishes d on b.dish_id = d.id LEFT JOIN categories c on c.id = d.category_id WHERE login_id=? ORDER BY b.id
 select.all.baskets.dbe = Cannot find all dishes
 select.all.baskets.empty = Basket is empty
 
 create.basket.log = Add new dish to the basket, dish id:
 create.basket = INSERT INTO baskets (dish_id, login_id) VALUES (?,?)
-create.basket.dbe = Cannot insert basket
+create.basket.dbe = Cannot insert basket, id:
 
 delete.basket.log = Delete dish from the basket, dish id:
 delete.basket = DELETE FROM baskets WHERE id IN (SELECT id FROM baskets WHERE dish_id=? LIMIT 1)
