clean up code and write almost all javadoc

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -14,19 +14,22 @@ select.login.byLogin.dbe.exist = User with same login exists!
 # ---------- DISHES
 
 select.all.dishes = SELECT * FROM dishes d LEFT JOIN categories c ON d.category_id = c.id
+select.all.dishes.pageable = SELECT (select count(*) from dishes),* FROM (SELECT row_number() OVER (ORDER BY %1$s %2$s) AS row,* FROM dishes d LEFT JOIN categories c ON d.category_id = c.id ORDER BY %1$s %2$s) AS temp WHERE temp.row BETWEEN ? AND ?
+select.all.dishes.pageable.filter = SELECT (select count(*) from dishes WHERE category_id=?),* FROM (SELECT row_number() OVER (ORDER BY %1$s %2$s) AS row,* FROM dishes d LEFT JOIN categories c ON d.category_id = c.id WHERE c.id=? ORDER BY %1$s %2$s) AS temp WHERE temp.row BETWEEN ? AND ?
+select.all.categories = SELECT * FROM categories
 select.all.dishes.dbe = Cannot find all dishes
 
 select.dishes.log = Select dish, id:
 select.dishes = SELECT * FROM dishes d LEFT JOIN categories c ON d.category_id=c.id WHERE d.id=?
 select.dishes.dbe = Cannot find dish, wrong id:
 
-update.dishes.log = Update dish:
-update.dishes = UPDATE dishes SET name_en=?, name_ua=?, price=? WHERE name_en=?
-update.dishes.dbe = Cannot update dish, id:
-
-delete.dishes.log = Delete dish, id:
-delete.dishes = DELETE FROM dishes WHERE id=?
-delete.dishes.dbe = Cannot delete dish, id:
+#update.dishes.log = Update dish:
+#update.dishes = UPDATE dishes SET name_en=?, name_ua=?, price=? WHERE name_en=?
+#update.dishes.dbe = Cannot update dish, id:
+#
+#delete.dishes.log = Delete dish, id:
+#delete.dishes = DELETE FROM dishes WHERE id=?
+#delete.dishes.dbe = Cannot delete dish, id:
 
 # ---------- BASKETS
 
@@ -83,7 +86,9 @@ invalid.update.status = You cannot update new and done order
 
 # ---------- Non standard errors
 
+error.try.again = Something goes wrong, try again
 error.unknown.role = Unknown role
+error.json = Cannot get json body from request input stream or cannot pars it
 transaction.rollback = Transaction is being rolled back
 transaction.rollback.fail = Error in transaction rollback
 
