all javadocs done

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -18,6 +18,7 @@ select.all.dishes.pageable = SELECT (select count(*) from dishes),* FROM (SELECT
 select.all.dishes.pageable.filter = SELECT (select count(*) from dishes WHERE category_id=?),* FROM (SELECT row_number() OVER (ORDER BY %1$s %2$s) AS row,* FROM dishes d LEFT JOIN categories c ON d.category_id = c.id WHERE c.id=? ORDER BY %1$s %2$s) AS temp WHERE temp.row BETWEEN ? AND ?
 select.all.categories = SELECT * FROM categories
 select.all.dishes.dbe = Cannot find all dishes
+select.all.dishes.empty = Dishes list is empty
 
 select.dishes.log = Select dish, id:
 select.dishes = SELECT * FROM dishes d LEFT JOIN categories c ON d.category_id=c.id WHERE d.id=?
@@ -43,7 +44,7 @@ create.basket = INSERT INTO baskets (dish_id, login_id) VALUES (?,?)
 create.basket.dbe = Cannot insert basket, id:
 
 delete.basket.log = Delete dish from the basket, dish id:
-delete.basket = DELETE FROM baskets WHERE id IN (SELECT id FROM baskets WHERE dish_id=? LIMIT 1)
+delete.basket = DELETE FROM baskets WHERE id IN (SELECT id FROM baskets WHERE dish_id=? AND login_id=? LIMIT 1)
 delete.basket.dbe = Cannot delete basket, id:
 
 delete.all.basket.log = Delete dish from the basket, dish id:
@@ -77,11 +78,13 @@ invalid.fields = Invalid form, empty fields
 invalid.field = Invalid fields
 invalid.id = Invalid id
 invalid.positive.id = Invalid id, should be positive number
+invalid.login = Invalid username, must consist of [a-zA-Z0-9] and has min 2 symbols
 invalid.email = Invalid email
 invalid.password = Invalid password, must have 2-6 symbols
 invalid.username = Invalid username, login exists
 invalid.user = You cannot login, this uses already logged in
 invalid.price = Price cannot be 0 and has no more than 2 digits after comma
+invalid.status = Invalid status, this status does not exist
 invalid.update.status = You cannot update new and done order
 
 # ---------- Non standard errors
