--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -11,12 +11,18 @@ select.login.byLogin.dbe = Wrong login for user:
 select.login.byLogin.dbe.pass = Wrong password for user:
 select.login.byLogin.dbe.exist = User with same login exists!
 
+# ---------- CATEGORIES
+
+select.all.categories.log = Getting categories list
+select.all.categories = SELECT * FROM categories
+select.all.categories.dbe = Cannot find all categories
+select.all.categories.empty = Categories list is empty
+
 # ---------- DISHES
 
 select.all.dishes = SELECT * FROM dishes d LEFT JOIN categories c ON d.category_id = c.id
 select.all.dishes.pageable = SELECT (select count(*) from dishes),* FROM (SELECT row_number() OVER (ORDER BY %1$s %2$s) AS row,* FROM dishes d LEFT JOIN categories c ON d.category_id = c.id ORDER BY %1$s %2$s) AS temp WHERE temp.row BETWEEN ? AND ?
 select.all.dishes.pageable.filter = SELECT (select count(*) from dishes WHERE category_id=?),* FROM (SELECT row_number() OVER (ORDER BY %1$s %2$s) AS row,* FROM dishes d LEFT JOIN categories c ON d.category_id = c.id WHERE c.id=? ORDER BY %1$s %2$s) AS temp WHERE temp.row BETWEEN ? AND ?
-select.all.categories = SELECT * FROM categories
 select.all.dishes.dbe = Cannot find all dishes
 select.all.dishes.empty = Dishes list is empty
 
@@ -24,13 +30,17 @@ select.dishes.log = Select dish, id:
 select.dishes = SELECT * FROM dishes d LEFT JOIN categories c ON d.category_id=c.id WHERE d.id=?
 select.dishes.dbe = Cannot find dish, wrong id:
 
-#update.dishes.log = Update dish:
-#update.dishes = UPDATE dishes SET name_en=?, name_ua=?, price=? WHERE name_en=?
-#update.dishes.dbe = Cannot update dish, id:
-#
-#delete.dishes.log = Delete dish, id:
-#delete.dishes = DELETE FROM dishes WHERE id=?
-#delete.dishes.dbe = Cannot delete dish, id:
+create.dishes.log = Create new dish
+create.dishes = INSERT INTO dishes (name_en, name_ua, price, time, category_id) VALUES (?,?,?,?,?)
+create.dishes.dbe = Cannot insert dish: 
+
+update.dishes.log = Update dish:
+update.dishes = UPDATE dishes SET name_en=?, name_ua=?, price=? WHERE id=?
+update.dishes.dbe = Cannot update dish, id:
+
+delete.dishes.log = Delete dish, id:
+delete.dishes = DELETE FROM dishes WHERE id=?
+delete.dishes.dbe = Cannot delete dish, id:
 
 # ---------- BASKETS
 
@@ -83,7 +93,9 @@ invalid.email = Invalid email
 invalid.password = Invalid password, must have 2-6 symbols
 invalid.username = Invalid username, login exists
 invalid.user = You cannot login, this uses already logged in
-invalid.price = Price cannot be 0 and has no more than 2 digits after comma
+invalid.name_en = Invalid english dish name
+invalid.name_ua = Invalid ukrainian dish name
+invalid.price = Price cannot be <= 0 and has no more than 2 digits after comma
 invalid.status = Invalid status, this status does not exist
 invalid.update.status = You cannot update new and done order
 
@@ -95,6 +107,7 @@ error.json = Cannot get json body from request input stream or cannot pars it
 transaction.rollback = Transaction is being rolled back
 transaction.rollback.fail = Error in transaction rollback
 
+error.denied = Access Denied!
 error.access.denied = AccessDenied! You need to authorize!
 error.forbidden.page = AccessDenied! Forbidden page!
 error.for.logged.user = AccessDenied! You need to logout first!
