--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -57,9 +57,9 @@ delete.basket.log = Delete dish from the basket, dish id:
 delete.basket = DELETE FROM baskets WHERE id IN (SELECT id FROM baskets WHERE dish_id=? AND login_id=? LIMIT 1)
 delete.basket.dbe = Cannot delete basket, id:
 
-delete.all.basket.log = Delete dish from the basket, dish id:
+delete.all.basket.log = Crear all user basket, user id:
 delete.all.basket = DELETE FROM baskets WHERE login_id=?
-delete.all.basket.dbe = Cannot delete basket, user id:
+delete.all.basket.dbe = Cannot clear basket, user id:
 
 # ---------- ORDERS
 
