--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,8 +1,13 @@
+# --> valid customer or manager data to pass authentication
 test.id = 2
 test.user = ww
 test.pass = 1
 
-wrong.input.id = 0
+test.invalid.login = вапвпіп
+test.invalid.email = fffff
+test.invalid.password = 1
 
+
+wrong.input.id = 0
 unreal.dish.id = 666
 exist.dish.id = 4
