SQL create tables

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -4,12 +4,12 @@ create.user.log = Create new user:
 create.user = INSERT INTO login (login, email, password, role, time) VALUES (?,?,?,?,?)
 create.user.dbe = Cannot insert user:
 
-select.login = Login user: 
+select.login = Login user:
 select.login.byLogin = SELECT * FROM login WHERE login=?
 select.login.byLogin.success = User logged successfully, user:
 select.login.byLogin.dbe = Wrong login for user:
 select.login.byLogin.dbe.pass = Wrong password for user:
-select.login.byLogin.dbe.exist = User with same login exists!
+#select.login.byLogin.dbe.exist = User with same login exists!
 
 # ---------- CATEGORIES
 
@@ -32,10 +32,10 @@ select.dishes.dbe = Cannot find dish, wrong id:
 
 create.dishes.log = Create new dish
 create.dishes = INSERT INTO dishes (name_en, name_ua, price, time, category_id) VALUES (?,?,?,?,?)
-create.dishes.dbe = Cannot insert dish: 
+create.dishes.dbe = Cannot insert dish:
 
 update.dishes.log = Update dish:
-update.dishes = UPDATE dishes SET name_en=?, name_ua=?, price=? WHERE id=?
+update.dishes = UPDATE dishes SET name_en=?, name_ua=?, price=?, time=? WHERE id=?
 update.dishes.dbe = Cannot update dish, id:
 
 delete.dishes.log = Delete dish, id:
@@ -55,7 +55,7 @@ create.basket.dbe = Cannot insert basket, id:
 
 delete.basket.log = Delete dish from the basket, dish id:
 delete.basket = DELETE FROM baskets WHERE id IN (SELECT id FROM baskets WHERE dish_id=? AND login_id=? LIMIT 1)
-delete.basket.dbe = Cannot delete basket, id:
+#delete.basket.dbe = Cannot delete basket, id:
 
 delete.all.basket.log = Crear all user basket, user id:
 delete.all.basket = DELETE FROM baskets WHERE login_id=?
@@ -85,9 +85,9 @@ update.orders.dbe = Cannot update orders status, id:
 
 # ----------Validation errors
 invalid.fields = Invalid form, empty fields
-invalid.field = Invalid fields
+#invalid.field = Invalid fields
 invalid.id = Invalid id
-invalid.positive.id = Invalid id, should be positive number
+#invalid.positive.id = Invalid id, should be positive number
 invalid.login = Invalid username, must consist of [a-zA-Z0-9] and has min 2 symbols
 invalid.email = Invalid email
 invalid.password = Invalid password, must have 2-6 symbols
